Updated jupyter notebook to work with full version.

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -4,156 +4,354 @@
    "cell_type": "markdown",
    "id": "ca3f462e",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Have Another Retirement Planner"
+   ]
   },
   {
-   "cell_type": "raw",
-   "id": "24f3ec13",
+   "cell_type": "markdown",
+   "id": "b503b12c",
    "metadata": {},
    "source": [
-    "import retirement as rp\n",
+    "Some description here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d10eea49",
+   "metadata": {},
+   "source": [
+    "## Just some Python module bookkeeping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75165f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "# import retirement as rp\n",
     "\n",
-    "rp.setVerbose(True)\n",
+    "import importlib\n",
+    "rp = importlib.import_module('retirement')\n",
+    "importlib.reload(rp)\n",
     "\n",
-    "plan = rp.Plan(YOB=[1958, 1961], expectancy=[91, 92])\n",
+    "rp.setVerbose(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09eb094a",
+   "metadata": {},
+   "source": [
+    "## Initialize our plan\n",
+    "Plan must start with year of birth of each of the spouse and their expected lifespan.\n",
     "\n",
-    "plan.setAssetBalances(taxable=[500000, 500000], \n",
-    "                      taxDeferred=[1000000, 500000],\n",
-    "                      taxFree=[100000, 100000],\n",
-    "                      beneficiary=[1., 1.])\n",
+    "There are plenty of predictors on the web. Pick your favorite:\n",
     "\n",
-    "plan.setAssetRatios(taxableR=[[0, .5, .5], [0, .5, .5]],\n",
-    "                    taxDeferredR=[[.6, .4, 0.], [.6, .4, 0]],\n",
-    "                    taxFreeR=[[.8, .2, 0], [.8, .2, 0]])\n",
+    "https://www.livingto100.com/calculator\n",
     "\n",
+    "https://www.sunlife.ca/en/tools-and-resources/tools-and-calculators/life-expectancy-calculator/\n",
     "\n",
-    "# Specify rate of returns for each class of assets.\n",
-    "# Valid entries are 'historical', 'stochastic', or a list of average values.\n",
-    "myrates = [0.09, 0.04, 0.03, 0.038]\n",
-    "plan.setRates(myrates)\n",
+    "or just Google life expectancy calculator.\n",
     "\n",
-    "# Enter desired value for net income in retirementi, and spending profile.\n",
-    "plan.setDesiredIncome(150000, 'smile')\n",
+    "There are two values needed for couples. Single individuals just enter one value in each list [ ]. For couples, keep the same order when entering data. Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 yo, while Jill thinks she might reach age 92."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea933c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan = rp.Plan(YOB=[1961, 1964], expectancy=[89, 92])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f70ed2c",
+   "metadata": {},
+   "source": [
+    "## Specify account balances and spousal beneficiaries\n",
+    "For each spouse, accounts have three buckets comprising of the total value of:\n",
+    "- Individual taxable investment accounts, including bank accounts, and CDs\n",
+    "- Tax-deferred accounts, including all IRAs, 401k, 403b, etc.\n",
+    "- Tax-free accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "# How to handle withdrawals between spouses.\n",
-    "plan.setSpousalSplit('auto')\n",
+    "The beneficiary values specifies the fraction of total of assets left to the other spouse at death. There are two values for each type of account, one for each spouse following the same order as before.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fbbf071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.setAssetBalances(taxable=[90000, 40000], \n",
+    "                      taxDeferred=[500000, 150000],\n",
+    "                      taxFree=[80000, 25000],\n",
+    "                      beneficiary=[1., 1.])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b670d45a",
+   "metadata": {},
+   "source": [
+    "## What is the current and desired future asset allocations?\n",
+    "Each account can invest in 3 major asset classes:\n",
+    "- Equities that can be represented by S&P500\n",
+    "- Corporate bonds (AA) representing bond assets\n",
+    "- Fixed securities represented by the 10-year treasury bond\n",
     "\n",
-    "# Now enter fixed income.\n",
+    "The total of percentages in each class of asset for each account must add to 100%.\n",
+    "\n",
+    "You are asked to provide an asset distribution for today, and one for the end of your life.\n",
+    "Values in between will be interpolated using a linear operator (for now)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae953f7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.setInitialAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
+    "                  taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
+    "                  taxFreeAR=[[80, 20, 0], [80, 20, 0]])\n",
+    "\n",
+    "plan.setFinalAR(taxableAR=[[0, 50, 50], [0, 50, 50]],\n",
+    "                taxDeferredAR=[[60, 40, 0], [60, 40, 0]],\n",
+    "                taxFreeAR=[[80, 20, 0], [80, 20, 0]])\n",
+    "\n",
+    "plan.interpolateAR('linear')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d5dab7a",
+   "metadata": {},
+   "source": [
+    "## Specify rates of return and inflation rate\n",
+    "We can specify the rate of returns for each class of assets, and inflation.\n",
+    "Valid entries are 'historical', 'stochastic', or a list of average values.\n",
+    "\n",
+    "For historical and stochastic data, data from 1928 to today is available for experimenting.\n",
+    "Ranges chosen smaller that the life horizon will have rates repeated in cycle.\n",
+    "\n",
+    "Choosing a range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc.\n",
+    "One can also use fixed rates by providing a list of 4 entries as follows:\n",
+    "\n",
+    "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
+    "    plan.setRates(myrates)\n",
+    "    \n",
+    "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, bonds, and fixed assets, respectively, with an average inflation rate of 3.8%.\n",
+    "\n",
+    "Note that the S&P500 rates used always include dividends."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d96568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plan.setRates('historical', 1978, 2022)\n",
+    "plan.setRates([8, 4, 4, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15812568",
+   "metadata": {},
+   "source": [
+    "## What is your desired net income at retirement?\n",
+    "For determining this value, retirement planners will strongly suggest that you've done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you will need in retirement.\n",
+    "\n",
+    "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will be only inflation-adjusted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5583438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enter desired value for net income, and spending profile.\n",
+    "plan.setDesiredIncome(90000, 'smile')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10288405",
+   "metadata": {},
+   "source": [
+    "## You must have some fixed income?\n",
+    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are. Entries are the predicted amount for each spouse and the age for the commencement of benefits.\n",
+    "\n",
+    "If you have no pension, just use zeros (0) as entries, as in\n",
+    "\n",
+    "    plan.setPension([0, 0], [65, 65])\n",
+    "    \n",
+    "For social security, you need to provide predicted amount and the age at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get from your own account at the Social Security Administration (ssa.gov)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5242970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plan.setPension([0, 10000], [65, 65])\n",
     "\n",
-    "# And social security income.\n",
-    "plan.setSocialSecurity([40000, 30000], [70, 70])\n",
+    "plan.setSocialSecurity([30000, 28000], [70, 70])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ea2988",
+   "metadata": {},
+   "source": [
+    "## Provide work income, contributions, Roth conversions, and other items by year\n",
+    "You will need to provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
     "\n",
-    "# Name of spreadsheet containing financial events (contributions, etc).\n",
+    "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
+    "|--|--|--|--|--|--|--|--|--|\n",
+    "|2023 | | | | | | | | |\n",
+    "|2024 | | | | | | | | |\n",
+    "| ... | | | | | | | | |\n",
+    "|20XX | | | | | | | | |\n",
+    "\n",
+    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account).\n",
+    "\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income.\n",
+    "\n",
+    "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would receive (e.g., inheritance, or large gifts to or from you).\n",
+    "\n",
+    "The TAB name for each spreadsheet represents the name of the spouse for reporting transactions resulting from the plan. So for Jack and Jill, this worksheet file would have two tabs, the first one marked *Jack* and the second one marked *Jill*, following the same order of data as before.\n",
+    "\n",
+    "An example is provided in the file *timeHorizon.xlsx*. Files from LibreOffice can also be read."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7156e4c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plan.readContributions('timeHorizon.xlsx')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd06c67f",
+   "id": "34625757",
    "metadata": {},
-   "source": []
+   "source": [
+    "## How do you want to withdraw from you and your spouse's accounts?\n",
+    "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective values. It can also be specified as a value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "31ebc1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plan.setSpousalSplit('auto')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be94aadd",
+   "metadata": {},
+   "source": [
+    "## Run calculations\n",
+    "This is where everythng gets calculated for the time horizon set by the life expectancy of individual(s)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20163487",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m help(rp)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rp' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(rp)"
+    "plan.run();"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "72fde196",
+   "id": "69ade1a3",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Show net income compared to target over the years"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56550dbd",
+   "id": "e0380ad9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import data"
+    "plan.plotNetIncome();"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75922fac",
+   "id": "28b4d5de",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Show sources of income over the years"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6cea9b",
-   "metadata": {},
+   "id": "b339b0e5",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "plan.plotSources();"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37e905a2",
+   "id": "abf8fa0e",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9609dd50",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "data.u.verbose = True\n",
-    "data.getDistributions(1928, 2022)"
+    "## Show account balances at the beginning of the year"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285239dd",
+   "id": "1ca15236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizonFile = \"myTimeHorizons.xlsx\"\n",
-    "settings = \"m+l_2023\""
+    "plan.plotAccounts();"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f719e638",
+   "cell_type": "markdown",
+   "id": "b59ea90d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "retirement.runOnce(settings, horizonFile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39ba8d49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retirement.some = 1"
+    "## Show annual taxes paid over the years"
    ]
   },
   {
@@ -163,7 +361,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(retirement.some)"
+    "plan.plotTaxes();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24351b7c",
+   "metadata": {},
+   "source": [
+    "## Show taxable annual income and anticipated tax brackets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc0d814",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plan.plotTaxableIncome();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "906b6767",
+   "metadata": {},
+   "source": [
+    "## Show annual rates used for calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83b7f57a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plan.plotRates();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf89f89",
+   "metadata": {},
+   "source": [
+    "## Do we save this plan?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29776b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plan.savePlanXL('Jack and Jill')"
    ]
   }
  ],
@@ -183,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
