Clarified text in notebook.

--- a/harp.ipynb
+++ b/harp.ipynb
@@ -5,12 +5,13 @@
    "id": "ca3f462e",
    "metadata": {},
    "source": [
-    "# Have Another Retirement Planner"
+    "# HARP\n",
+    "## Have Another Retirement Planner"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b503b12c",
+   "id": "edc6eaa6",
    "metadata": {},
    "source": [
     "Some description here."
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d10eea49",
+   "id": "a0fc25b6",
    "metadata": {},
    "source": [
     "## Just some Python module bookkeeping"
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c75165f3",
+   "id": "0528b077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09eb094a",
+   "id": "f24324bd",
    "metadata": {},
    "source": [
     "## Initialize our plan\n",
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ea933c8",
+   "id": "0256b333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f70ed2c",
+   "id": "164bded1",
    "metadata": {},
    "source": [
     "## Specify account balances and spousal beneficiaries\n",
@@ -81,14 +82,15 @@
     "- Tax-deferred accounts, including all IRAs, 401k, 403b, etc.\n",
     "- Tax-free accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "The beneficiary values specifies the fraction of total of assets left to the other spouse at death. There are two values for each type of account, one for each spouse following the same order as before.\n",
-    "\n"
+    "There are two values for each type of account, one for each spouse following the same order as before.\n",
+    "\n",
+    "The beneficiary values specifies the fraction of total of assets left to the other spouse at death."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fbbf071",
+   "id": "7ac7b063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,25 +102,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b670d45a",
+   "id": "4277b106",
    "metadata": {},
    "source": [
     "## What is the current and desired future asset allocations?\n",
     "Each account can invest in 3 major asset classes:\n",
-    "- Equities that can be represented by S&P500\n",
+    "- Equities that can be represented by the S&P500 index\n",
     "- Corporate bonds (AA) representing bond assets\n",
     "- Fixed securities represented by the 10-year treasury bond\n",
     "\n",
     "The total of percentages in each class of asset for each account must add to 100%.\n",
     "\n",
     "You are asked to provide an asset distribution for today, and one for the end of your life.\n",
-    "Values in between will be interpolated using a linear operator (for now)."
+    "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
+    "if you want to shift asset allocation as you age."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae953f7a",
+   "id": "fab9cc25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5dab7a",
+   "id": "dc5f236f",
    "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
@@ -143,9 +146,11 @@
     "Valid entries are 'historical', 'stochastic', or a list of average values.\n",
     "\n",
     "For historical and stochastic data, data from 1928 to today is available for experimenting.\n",
-    "Ranges chosen smaller that the life horizon will have rates repeated in cycle.\n",
+    "Ranges chosen smaller that the life horizon will have rates repeated in cycle. For example,\n",
+    "choosing 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
     "Choosing a range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc.\n",
+    "\n",
     "One can also use fixed rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
@@ -159,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d96568",
+   "id": "fc3d5a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +174,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15812568",
+   "id": "3d566b75",
    "metadata": {},
    "source": [
     "## What is your desired net income at retirement?\n",
-    "For determining this value, retirement planners will strongly suggest that you've done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you will need in retirement.\n",
+    "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement.\n",
     "\n",
     "The desired income here is the net income (i.e., after paying taxes) that you would like to have starting at your retirement age. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will be only inflation-adjusted."
    ]
@@ -181,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5583438",
+   "id": "c6563e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10288405",
+   "id": "179b0ff6",
    "metadata": {},
    "source": [
     "## You must have some fixed income?\n",
@@ -201,13 +206,13 @@
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, you need to provide predicted amount and the age at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get from your own account at the Social Security Administration (ssa.gov)."
+    "For social security, you must provide the predicted amount(s) and the age(s) at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get from your own account at the Social Security Administration (ssa.gov)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5242970",
+   "id": "dc7937ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,11 +223,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93ea2988",
+   "id": "2798496d",
    "metadata": {},
    "source": [
     "## Provide work income, contributions, Roth conversions, and other items by year\n",
-    "You will need to provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
+    "In order to run the plan, you must provide a worksheet with one spreadsheet (TAB) per spouse with the following information:\n",
     "\n",
     "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
     "|--|--|--|--|--|--|--|--|--|\n",
@@ -231,7 +236,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account).\n",
+    "Here, 20XX is the first year after both spouses have passed. For the columns, *Anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and every entry must be in lower case.\n",
     "\n",
     "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. Being in excel, you can use the calculator to enter percentage of your anticipated income.\n",
     "\n",
@@ -245,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7156e4c5",
+   "id": "ca86c1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34625757",
+   "id": "de858c40",
    "metadata": {},
    "source": [
     "## How do you want to withdraw from you and your spouse's accounts?\n",
@@ -264,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31ebc1e5",
+   "id": "a88a3365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be94aadd",
+   "id": "d2eb3097",
    "metadata": {},
    "source": [
     "## Run calculations\n",
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ade1a3",
+   "id": "a45d4a57",
    "metadata": {},
    "source": [
     "## Show net income compared to target over the years"
@@ -301,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0380ad9",
+   "id": "971bd628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b4d5de",
+   "id": "af1445bc",
    "metadata": {},
    "source": [
     "## Show sources of income over the years"
@@ -319,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b339b0e5",
+   "id": "e0f71faf",
    "metadata": {
     "scrolled": false
    },
@@ -330,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abf8fa0e",
+   "id": "b9191a01",
    "metadata": {},
    "source": [
     "## Show account balances at the beginning of the year"
@@ -339,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ca15236",
+   "id": "f330fef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b59ea90d",
+   "id": "9a970168",
    "metadata": {},
    "source": [
     "## Show annual taxes paid over the years"
@@ -366,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24351b7c",
+   "id": "7d076968",
    "metadata": {},
    "source": [
     "## Show taxable annual income and anticipated tax brackets"
@@ -375,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc0d814",
+   "id": "2ccb652d",
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906b6767",
+   "id": "3feb5f50",
    "metadata": {},
    "source": [
     "## Show annual rates used for calculations"
@@ -395,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b7f57a",
+   "id": "a44f7f73",
    "metadata": {
     "scrolled": true
    },
@@ -406,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf89f89",
+   "id": "708fcb8c",
    "metadata": {},
    "source": [
     "## Do we save this plan?"
@@ -415,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29776b53",
+   "id": "09ada819",
    "metadata": {},
    "outputs": [],
    "source": [
